--- a/self_drive_car.ipynb
+++ b/self_drive_car.ipynb
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The image is good, but there are many unnecessary objects like the mountains, trees, sky, etc  that can be removed and only the road track can be considered for the training purpose. Along with that proper color image processing is done using the opencv library."
+    "The image is good, but there are many unnecessary objects like the mountains, trees, sky, etc  that can be removed and only the road track can be considered for the training purpose. Along with that, proper color image processing is done using the opencv library."
    ]
   },
   {
@@ -323,7 +323,7 @@
     "    cropped_img = img[60:160,:]\n",
     "    # color conversion from BGR to YUV\n",
     "    final_img = cv2.cvtColor(cropped_img, cv2.COLOR_BGR2YUV)\n",
-    "    # applycation of gaussian blur\n",
+    "    # application of gaussian blur\n",
     "    final_img = cv2.GaussianBlur(final_img,(3,5),0)\n",
     "    # resize image\n",
     "    output = cv2.resize(final_img, (300,80))\n",
@@ -647,6 +647,7 @@
     }
    ],
    "source": [
+    "# Early stopping to prevent overfitting\n",
     "callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5)\n",
     "history = model.fit(xtrain, ytrain, batch_size=128,validation_data=(xval, yval), epochs=100, callbacks=[callback])"
    ]
@@ -657,6 +658,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# saving the model\n",
     "model.save('model2.h5')"
    ]
   },
@@ -679,6 +681,7 @@
     }
    ],
    "source": [
+    "# plotting the loss vs validation loss\n",
     "plt.plot(history.history['loss'])\n",
     "plt.plot(history.history['val_loss'])\n",
     "plt.legend(['Training', 'Validation'])\n",
