--- a/self_drive_car.ipynb
+++ b/self_drive_car.ipynb
@@ -681,7 +681,7 @@
     }
    ],
    "source": [
-    "# plotting the loss vs validation loss\n",
+    "# plotting the losses vs epochs chart\n",
     "plt.plot(history.history['loss'])\n",
     "plt.plot(history.history['val_loss'])\n",
     "plt.legend(['Training', 'Validation'])\n",
