--- a/self_drive_car.ipynb
+++ b/self_drive_car.ipynb
@@ -375,6 +375,7 @@
     "            # splitting image path and filename\n",
     "            fileName = mod_name(df.iloc[row, i])\n",
     "            filePath = './IMG/'+ fileName\n",
+    "            # processing the images\n",
     "            img = img_process(filePath)\n",
     "            images.append(img)\n",
     "            steerings.append(df['steering'][row])\n",
@@ -423,6 +424,7 @@
     }
    ],
    "source": [
+    "# Storing the augmented images and steering values in arrays\n",
     "augmented_images, augmented_steerings = data_augmentation(image_preprocessing)\n",
     "print(augmented_steerings[100])\n",
     "plt.imshow(augmented_images[100])\n",
